--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "easy-peasy": "^4.0.1",
-    "next": "10.0.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^10.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
   },
