--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-spring": "^9.0.0-rc.3",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
   },
