--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react-dom": "^17.0.1",
     "react-spring": "^9.0.0-rc.3",
     "styled-components": "^5.2.1",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "styled-react-modal": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
     "@types/styled-components": "^5.1.7",
+    "@types/styled-react-modal": "^1.2.0",
     "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.1.3"
   }
